@@ -31,8 +31,25 @@ $affs = $wpdb->get_results(
 $sel  = isset( $hunt->affiliate_site_id ) ? (int) $hunt->affiliate_site_id : 0;
 
 $t_table              = esc_sql( $wpdb->prefix . 'bhg_tournaments' );
-$tournaments          = $wpdb->get_results( "SELECT id, title FROM {$t_table} ORDER BY title ASC" );
 $selected_tournaments = function_exists( 'bhg_get_hunt_tournament_ids' ) ? bhg_get_hunt_tournament_ids( (int) $hunt->id ) : array();
+$selected_tournaments = array_values( array_filter( array_unique( array_map( 'absint', (array) $selected_tournaments ) ) ) );
+
+if ( empty( $selected_tournaments ) ) {
+	$tournaments = $wpdb->get_results(
+		$wpdb->prepare(
+			"SELECT id, title FROM {$t_table} WHERE status = %s ORDER BY title ASC",
+			'active'
+		)
+	);
+} else {
+	$placeholders = implode( ',', array_fill( 0, count( $selected_tournaments ), '%d' ) );
+	$tournaments  = $wpdb->get_results(
+		$wpdb->prepare(
+			"SELECT id, title FROM {$t_table} WHERE status = %s OR id IN ({$placeholders}) ORDER BY title ASC",
+			array_merge( array( 'active' ), $selected_tournaments )
+		)
+	);
+}
 
 $paged    = max( 1, absint( wp_unslash( $_GET['ppaged'] ?? '' ) ) );
 $per_page = 30;
